force-app/main/default/objects/Privacy_Notice__c/Privacy_Notice__c.object-meta.xml
<CustomObject>
    <description>GLBA Privacy Rule - Tracks annual privacy notices sent to customers. Financial institutions must provide clear privacy notices explaining information sharing practices.</description>
    <label>Privacy Notice</label>
    <nameField>
        <displayFormat>PN-{0000000}</displayFormat>
        <label>Privacy Notice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>