force-app/main/default/objects/Privacy_Notice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer account associated with the privacy notice</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Privacy Notices</relationshipLabel>
    <relationshipName>Privacy_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>