force-app/main/default/objects/Privacy_Notice__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual customer contact who received the privacy notice. Used when sending notices to specific individuals rather than to an Account-level address.</description>
    <inlineHelpText>Individual recipient of the notice</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Privacy Notices</relationshipLabel>
    <relationshipName>Privacy_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>