force-app/main/default/objects/Privacy_Notice__c/fields/Customer_Opted_Out__c.field-meta.xml
<CustomField>
    <fullName>Customer_Opted_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if customer exercised their opt-out rights</description>
    <label>Customer Opted Out</label>
    <type>Checkbox</type>
</CustomField>