force-app/main/default/objects/Privacy_Notice__c/fields/Next_Annual_Notice_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Annual_Notice_Due__c</fullName>
    <description>Date when next annual privacy notice is due (12 months from last notice)</description>
    <label>Next Annual Notice Due</label>
    <type>Date</type>
</CustomField>