force-app/main/default/objects/Privacy_Notice__c/fields/Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>Notice_Type__c</fullName>
    <description>Type of privacy notice (Initial, Annual, Revised)</description>
    <label>Notice Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
            <value>
                <fullName>Opt-Out Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>