force-app/main/default/objects/Privacy_Notice__c/fields/Notice_Version__c.field-meta.xml
<CustomField>
    <fullName>Notice_Version__c</fullName>
    <description>Version number of the privacy notice document</description>
    <label>Notice Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>