force-app/main/default/objects/Privacy_Notice__c/fields/Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Date__c</fullName>
    <description>Date when customer exercised opt-out rights</description>
    <label>Opt-Out Date</label>
    <type>DateTime</type>
</CustomField>