force-app/main/default/objects/Privacy_Notice__c/fields/Opt_Out_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Deadline__c</fullName>
    <description>Deadline by which the customer must respond to exercise opt-out rights. GLBA requires a reasonable opportunity to opt out, typically 30 days from notice receipt.</description>
    <inlineHelpText>Last day customer can opt out (30 days)</inlineHelpText>
    <label>Opt-Out Deadline</label>
    <type>Date</type>
</CustomField>