force-app/main/default/objects/Privacy_Notice__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>Date and time when the privacy notice was sent to the customer. Used to track compliance with GLBA annual notice requirements and calculate opt-out deadlines.</description>
    <inlineHelpText>When the notice was sent to the customer</inlineHelpText>
    <label>Sent Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>